This will conflict with the branch

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright -->
 <head>
-	<title>Simple Title -  branch test</title>
+	<title>Simple Title - master merge conflicting text</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,11 +15,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content that will cause merge conflicts
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy;Merge conflict Company 2014</p>
 	</footer>
 </body>
 </html>
