master branch before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- copyright -->
+<!-- copyright Adding rebasing conflict changes-->
 <head>
 	<title>Simple Title - master merge conflicting text</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
