adding conflicting changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Adding rebasing conflict changes-->
 <head>
-	<title>Simple Title - master merge conflicting text</title>
+	<title>Simple Title - master merge conflicting text rebase conflicts too</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
