Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!-- copyright Adding rebasing conflict changes-->
+<!-- copyright Adding rebasing conflict changes, doing it again-->
 <head>
-	<title>Simple Title - Lots of trouble</title>
+	<title>Simple Title - Lots of trouble in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
