Changes after git stash branch

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Stash example-->
 <head>
-	<title>Updating title for Stash Example</title>
+	<title>Updating title for Stash Example into branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
